[metadata]
name = floyd-warshall-recursive-adibhaider
version = 0.0.1
author = Adib Haider
author_email = haideradib@gmail.com
description = Python code for the Floyd-Warshall algorithm using recursion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adibhaider/floyd-warshall-recursive/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
